--- a/src/main/webapp/jspTemplete/test02/style.css
+++ b/src/main/webapp/jspTemplete/test02/style.css
@@ -1,9 +1,17 @@
 @charset "UTF-8";
 
-header {
+header >.logo {
+	height:100px;
+}
+
+header > .search {
 	height:100px;
 }
 
 .main-menu {
+	height:50px;
+}
+
+footer {
 	height:50px;
 }
