--- a/src/main/webapp/db/test03/style.css
+++ b/src/main/webapp/db/test03/style.css
@@ -2,20 +2,38 @@
 
 header {
 	height:80px;
+	background-color:coral;
 }
 
 .main-menu {
-	height:40px;
+	height:50px;
+	background-color:coral;
 }
 
-.main-menu > .nav-item {
-	
+.main-menu > .nav-item:hover {
+	background-color:blue;
 }
 
 .contents {
 	height:500px;
 }
 
+.contents > .goods {
+	border-style:solid;
+	border-color:coral;
+	height:330px;
+	width:360px;
+	padding:10px;
+}
+
+img {
+	width:100%
+}
+
 footer {
 	height:100px;
+}
+
+.coral {
+	color:coral;	
 }
